# todo_jenkins

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  pyproject.toml  setup.cfg  test.py
jenkins/: jenkinsfile
nginx/: default.conf
src/apps/base/management/commands/: createadmin.py
src/apps/base/tests/: test_createadmin_cmd.py
src/config/: urls.py
src/config/settings/: __init__.py  base.py  databases.py  logging.py
src/utils/: __init__.py
src/utils/mixin_for/: base.py  tests.py
tests/: base.py  test_hi.py
tests/libs/: __init__.py  driver.py  my_live_server.py
